@@ -91,19 +91,6 @@ public class HTTPEndpoint extends AbstractEndpoint {
         // http method from incoming message is used as the http method
     }
 
-    private String decodeString(String value) {
-        if (value == null) {
-            return "";
-        }
-        try {
-            return URLDecoder.decode(value, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            if(log.isDebugEnabled()){
-                log.warn("Encoding is not supported", e);
-            }
-            return value;
-        }
-    }
     private void processUrlTemplate(MessageContext synCtx) throws ExpressionParseException {
         Map<String, Object> variables = new HashMap<String, Object>();
 
@@ -115,7 +102,7 @@ public class HTTPEndpoint extends AbstractEndpoint {
                     (propertyKey.toString().startsWith(RESTConstants.REST_URI_VARIABLE_PREFIX)
                             || propertyKey.toString().startsWith(RESTConstants.REST_QUERY_PARAM_PREFIX))) {
                 if (synCtx.getProperty(propertyKey.toString()) != null) {
-                    variables.put(propertyKey.toString(), decodeString((String) synCtx.getProperty(propertyKey.toString())));
+                    variables.put(propertyKey.toString(), (String) synCtx.getProperty(propertyKey.toString()));
                 }                              
             }
         }
@@ -127,7 +114,7 @@ public class HTTPEndpoint extends AbstractEndpoint {
             if(property.getName().toString() != null
                     && (property.getName().toString().startsWith(RESTConstants.REST_URI_VARIABLE_PREFIX) ||
                     property.getName().toString().startsWith(RESTConstants.REST_QUERY_PARAM_PREFIX) )) {
-                variables.put(property.getName(), decodeString((String) property.getValue()));
+                variables.put(property.getName(), (String) property.getValue());
             }
         }
 
@@ -145,12 +132,8 @@ public class HTTPEndpoint extends AbstractEndpoint {
         	evaluatedUri = template.getTemplate();
         }else{
             try {
-                // Decode needs to avoid replacing special characters(e.g %20 -> %2520) when creating URL.
-                String decodedString = URLDecoder.decode(template.expand(), "UTF-8");
-                URL url = new URL(decodedString);
-                URI uri = new URI(url.getProtocol(), url.getUserInfo(), url.getHost(), url.getPort(),
-                        url.getPath(), url.getQuery(), url.getRef());// this to avoid url.toURI which causes exceptions
-                evaluatedUri = uri.toURL().toString();
+                URI uri=new URI(template.expand());
+                evaluatedUri = uri.toString();
                 if (log.isDebugEnabled()) {
                     log.debug("Expanded URL : " + evaluatedUri);
                 }
@@ -159,12 +142,6 @@ public class HTTPEndpoint extends AbstractEndpoint {
                     log.debug("Invalid URL syntax for HTTP Endpoint: " + this.getName(), e);
                 }
                 evaluatedUri = template.getTemplate();
-            } catch(MalformedURLException e) {
-                log.debug("Invalid URL for HTTP Endpoint: " + this.getName());
-                evaluatedUri = template.getTemplate();
-            } catch(UnsupportedEncodingException e) {
-                log.debug("Exception while decoding the URL in HTTP Endpoint: " + this.getName());
-                evaluatedUri = template.getTemplate();                
             } catch(ExpressionParseException e) {
                 log.debug("No URI Template variables defined in HTTP Endpoint: " + this.getName());
                 evaluatedUri = template.getTemplate();
